Added and modified _BasicLayout

--- a/WebApplication5 Razor/Views/Home/Index.cshtml
+++ b/WebApplication5 Razor/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
 ﻿@model WebApplication5_Razor.Models.Product
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Product name";
+    Layout = "~/Views/_BasicLayout.cshtml";
 }
-
-<h2>Index</h2>
+Product name: @Model.Name
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+</head>
+<body>
+    <div>
+    </div>
+</body>
+</html>
 
